# LLM-Project-SemEval-Humor-Generation

./: .gitignore  README.md  README_DIAGNOSTICS_COMPARISON.md  REPORT_ENSEMBLE.md  RERANKING.md  mwahaha_task_a_en.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline_automation.ipynb  test_local.jsonl
configs/: dpo.yaml  generation.yaml  rag.yaml
diagnostics_ensemble/: en_2001.json  en_2002.json  en_2003.json  en_2004.json  en_2005.json  en_2006.json  en_2007.json  en_2008.json  en_2009.json  en_2010.json  en_2011.json  en_2012.json  en_2013.json  en_2014.json  en_2015.json  en_2016.json  en_2017.json  en_2018.json  en_2019.json  en_2020.json  en_2021.json  en_2022.json  en_2023.json  en_2024.json  en_2025.json  en_2026.json  en_2027.json  en_2028.json  en_2029.json  en_2030.json  en_2031.json  en_2032.json  en_2033.json  en_2034.json  en_2035.json  en_2036.json  en_2037.json  en_2038.json  en_2039.json  en_2040.json  (+260 more)
diagnostics_single_ministral/: en_2001.json  en_2002.json  en_2003.json  en_2004.json  en_2005.json  en_2006.json  en_2007.json  en_2008.json  en_2009.json  en_2010.json  en_2011.json  en_2012.json  en_2013.json  en_2014.json  en_2015.json  en_2016.json  en_2017.json  en_2018.json  en_2019.json  en_2020.json  en_2021.json  en_2022.json  en_2023.json  en_2024.json  en_2025.json  en_2026.json  en_2027.json  en_2028.json  en_2029.json  en_2030.json  en_2031.json  en_2032.json  en_2033.json  en_2034.json  en_2035.json  en_2036.json  en_2037.json  en_2038.json  en_2039.json  en_2040.json  (+260 more)
mwahaha/: __init__.py  cli.py  clients.py  humor.py  (+7 more)
(+56 files in other folders)
