[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semeval-humor-generation"
version = "0.1.0"
description = "Colab/Jupyter workflow for SemEval 2026 Task 1 MWAHAHA, Subtask A."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
colab = [
  "accelerate>=0.30.0",
  "bitsandbytes>=0.43.0",
  "huggingface_hub>=0.23.0",
  "torch>=2.2.0",
  "transformers>=4.43.0",
  "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["src"]
